# iChat

./: .eslintrc.cjs  .gitignore  README.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/bots/: abstract_bot.ts  index.ts
src/bots/chatgpt/: index.ts
src/const/: chatgpt.ts  index.ts
src/hooks/: use_chat.ts
src/layout/: index.tsx
src/layout/component/: Header.tsx  Nav.tsx  changeMode.tsx  nav.scss
src/pages/about/: index.tsx
src/pages/config/: const.ts  index.tsx  util.ts
src/pages/home/: index.tsx
src/pages/home/components/: Button.tsx  ErrorAction.tsx  MessageBubble.tsx  MessageCard.tsx  MessageList.tsx  a.js
src/pages/home/components/Markdown/: index.tsx  markdown.scss
src/router/: index.tsx
src/services/: chat-history.ts
src/state/: index.ts
src/styles/: common.scss  index.scss  mode.scss  variables.scss
src/theme/: config.ts  index.ts
src/types/: index.ts
src/utils/: errors.ts  index.ts  storage.ts
